# kyteware.dev

./: README.md  before-publishing.md  buildprod.sh  facts.json  interface-plan.md
exploder/: Cargo.toml
exploder/assets/: gumball_machine.blend  gumball_machine.glb
exploder/src/: dropping.rs  js_bindings.rs  lib.rs  loader.rs  main.rs  running.rs  waiting.rs
exploder/web_resource_out/: index.html
facts/: ai-air-mouse.project.md  faraway.project.md  guitar.tidbit.md  javalanalyzer.project.md  optimal-keyboard.project.md  ubc.experience.md  understand-rag.project.md
gumballs/: .gitignore  Cargo.toml  build-for-debug.sh  build-for-prod.sh  build-for-web.sh  build-to-test-standalone.sh  gumball_machine.blend
gumballs/src/: animations.rs  dropping.rs  filling.rs  js_bindings.rs  lib.rs  loader.rs  machine_lights.rs  main.rs  run.rs  waiting.rs
gumballs/standalone_build/: .gitignore  index.html  rs_bindings.js
gumballs/web_resource_out/: .gitignore  index.html  rs_bindings.js
kyteware-home/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
kyteware-home/public/: 404.html  assets  gumballs.json
kyteware-home/src/: App.css  App.tsx  Controls.css  Controls.tsx  GumballWrapper.css  GumballWrapper.tsx  Headerbar.css  Headerbar.tsx  colors.css  common.css  common.ts  data.ts  index.css  model.ts
